Feature Selection Better

--- a/3 Feature Selection/1.0.4 XGB_contData_iter copy.ipynb
+++ b/3 Feature Selection/1.0.4 XGB_contData_iter copy.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 13,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -54,21 +54,54 @@
             "3  6.336760  32.845950  1.928805  87.080875  2.288335  2.897523  15.779400   \n",
             "4  6.337460  33.387025  2.352595  84.489175  2.734682  3.571185  15.199680   \n",
             "\n",
-            "    DI55102   DI55152   DI55580  ...    TI40050   TI52014     TI55013  \\\n",
-            "0  0.963347  0.924879  1.017340  ...  81.156900  131.0990  236.672000   \n",
-            "1  0.965043  0.924515  1.014885  ...  82.965650  132.3490  230.501000   \n",
-            "2  0.968107  0.929955  1.015593  ...  82.461167  133.0350  223.885667   \n",
-            "3  0.969573  0.932388  1.014703  ...  83.676300  134.0690  219.719750   \n",
-            "4  0.971022  0.934531  1.014094  ...  85.328040  134.8424  217.253200   \n",
+            "    DI55102   DI55152   DI55580      FC42428      FC52018    FC55003  \\\n",
+            "0  0.963347  0.924879  1.017340  40773.90000  42583.40000  5622.8300   \n",
+            "1  0.965043  0.924515  1.014885  40816.90000  44547.30000  5308.8850   \n",
+            "2  0.968107  0.929955  1.015593  41080.96667  45105.73333  5489.7400   \n",
+            "3  0.969573  0.932388  1.014703  41606.60000  45413.77500  5709.1825   \n",
+            "4  0.971022  0.934531  1.014094  41722.12000  45547.02000  5653.1640   \n",
             "\n",
-            "      TI55014     TI55015   TI55016    TI55017  TI55021     TI55023  VI52558B  \n",
-            "0  223.704000  216.905000  207.7370  205.81700  213.813  212.301000  4.969810  \n",
-            "1  220.794000  216.033500  207.2460  205.70300  213.874  212.308500  4.616265  \n",
-            "2  214.879667  209.812667  202.7230  201.16400  214.433  212.926667  4.741457  \n",
-            "3  211.567250  206.503250  200.5075  199.00025  214.639  213.051250  4.436797  \n",
-            "4  209.326600  204.214800  198.6922  197.25440  214.733  213.071400  4.304762  \n",
+            "       FC55009      FC55102      FC55152   FC55552      FC55555      FC55569  \\\n",
+            "0  1770.180000  54668.30000  48447.40000  40424.10  30465.70000  6928.310000   \n",
+            "1  1182.393500  56315.80000  51242.20000  40409.25  30406.75000  6924.645000   \n",
+            "2   988.753333  55482.66667  50152.73333  40606.30  30908.93333  6925.813333   \n",
+            "3   862.683250  53522.02500  48242.85000  39171.20  29965.95000  6920.290000   \n",
+            "4   794.212400  52775.74000  47829.90000  39099.64  30056.26000  6916.018000   \n",
             "\n",
-            "[5 rows x 49 columns]\n"
+            "    FC55576  FFC55553  FFC55555     FYC55553     II52554    LC52572  \\\n",
+            "0  329.7610  1.045930  0.752379  42478.80000  228.724000  66.534100   \n",
+            "1  322.1770  1.049540  0.751183  42511.25000  237.562000  66.523200   \n",
+            "2  324.9680  1.050217  0.761243  42628.66667  240.325333  66.500500   \n",
+            "3  331.7720  1.050780  0.766600  41075.47500  241.663250  66.336525   \n",
+            "4  336.2358  1.051672  0.770305  40994.10000  242.179800  65.981980   \n",
+            "\n",
+            "     LC55553    LC55555    LC55557    LC55568    LC90366    LC90368   PI55004  \\\n",
+            "0  62.176800  60.362200  65.484000  40.136500  16.706900  49.278800  1.044590   \n",
+            "1  62.921050  60.446750  66.313950  40.252500  15.449150  49.267500  1.236360   \n",
+            "2  62.651867  60.350800  66.212233  40.059967  10.931340  48.643200  1.189883   \n",
+            "3  62.526325  60.118475  65.893675  39.835675   8.674930  48.382975  1.343838   \n",
+            "4  62.293540  60.150020  66.212620  40.179880   7.325074  48.332800  1.535224   \n",
+            "\n",
+            "    PI55020   PI55560    TC52015     TC55552     TC55553   TC55555   TC55566  \\\n",
+            "0 -0.437499 -0.264240  74.632500  178.773000  235.047000  179.6930  211.7810   \n",
+            "1 -0.389406 -0.279771  78.195800  179.011500  213.937500  179.9940  211.7810   \n",
+            "2 -0.377156 -0.106293  77.691633  180.276667  205.221667  180.0530  212.3670   \n",
+            "3 -0.366302 -0.057496  79.090850  180.993250  198.353500  180.5790  212.4105   \n",
+            "4 -0.327278 -0.047609  81.854140  181.511000  195.641600  180.2476  212.4664   \n",
+            "\n",
+            "     TI40050   TI52014     TI55013     TI55014     TI55015   TI55016  \\\n",
+            "0  81.156900  131.0990  236.672000  223.704000  216.905000  207.7370   \n",
+            "1  82.965650  132.3490  230.501000  220.794000  216.033500  207.2460   \n",
+            "2  82.461167  133.0350  223.885667  214.879667  209.812667  202.7230   \n",
+            "3  83.676300  134.0690  219.719750  211.567250  206.503250  200.5075   \n",
+            "4  85.328040  134.8424  217.253200  209.326600  204.214800  198.6922   \n",
+            "\n",
+            "     TI55017  TI55021     TI55023  VI52558B  \n",
+            "0  205.81700  213.813  212.301000  4.969810  \n",
+            "1  205.70300  213.874  212.308500  4.616265  \n",
+            "2  201.16400  214.433  212.926667  4.741457  \n",
+            "3  199.00025  214.639  213.051250  4.436797  \n",
+            "4  197.25440  214.733  213.071400  4.304762  \n"
           ]
         }
       ],
@@ -76,6 +109,7 @@
         "\n",
         "df_All_1 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\3 Feature Selection\\contData_all_Avg - 1o2.csv')\n",
         "df_All_2 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\3 Feature Selection\\contData_all_Avg - 2o2.csv')\n",
+        "df_TagDesc = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\CSV\\Not for Processing\\TagDesc.csv')\n",
         "# Concatenate (union) the dataframes\n",
         "df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
         "\n",
@@ -84,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 15,
       "metadata": {
         "trusted": true
       },
@@ -96,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -105,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -116,7 +150,9 @@
         "exclude_columns = ['Octanol', 'Hexanol',\n",
         "       'Ethanol', 'Decanol',\n",
         "       \n",
-        "       'TI52014', 'TI55013', 'TI55014', 'TI55015', 'TI55016', 'TI55017', 'TI55021', 'TI55023',\n",
+        "       'TI52014', 'TI55013', 'TI55014', 'TI55015', 'TI55016', 'TI55017', 'TI55023',\n",
+        "       # , 'TI55021'\n",
+        "\n",
         "       'TC52015', 'FC52018', 'II52554', 'TI40050', 'VI52558B'\n",
         "\n",
         "       # 'FC55102', 'FC55152', 'LC55557', 'LC55568', 'TC55555',\n",
@@ -134,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -145,11 +181,11 @@
               "       'FC55555', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'FYC55553',\n",
               "       'LC52572', 'LC55553', 'LC55555', 'LC55557', 'LC55568', 'LC90366',\n",
               "       'LC90368', 'PI55004', 'PI55020', 'PI55560', 'TC55552', 'TC55553',\n",
-              "       'TC55555', 'TC55566'],\n",
+              "       'TC55555', 'TC55566', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -160,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -172,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -227,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -235,19 +271,19 @@
           "output_type": "stream",
           "text": [
             "                                        Feature Rotation   Feature  Importance\n",
-            "0      [425 %Al, LC55557, FFC55555, FC55555, TC55552,...   425 %Al       477.0\n",
-            "1      [425 %Al, LC55557, FFC55555, FC55555, TC55552,...   LC55557       258.0\n",
-            "2      [425 %Al, LC55557, FFC55555, FC55555, TC55552,...  FFC55555       214.0\n",
-            "3      [425 %Al, LC55557, FFC55555, FC55555, TC55552,...   FC55555       166.0\n",
-            "4      [425 %Al, LC55557, FFC55555, FC55555, TC55552,...   TC55552       234.0\n",
+            "0      [425 %Al, LC55557, FFC55555, FC55555, PI55020,...   425 %Al       469.0\n",
+            "1      [425 %Al, LC55557, FFC55555, FC55555, PI55020,...   LC55557       250.0\n",
+            "2      [425 %Al, LC55557, FFC55555, FC55555, PI55020,...  FFC55555       214.0\n",
+            "3      [425 %Al, LC55557, FFC55555, FC55555, PI55020,...   FC55555       164.0\n",
+            "4      [425 %Al, LC55557, FFC55555, FC55555, PI55020,...   PI55020       182.0\n",
             "...                                                  ...       ...         ...\n",
-            "28825  [TC55566, TC55553, FC55102, FC55152, PI55560, ...   LC55568       145.0\n",
-            "28826  [TC55566, TC55553, FC55102, FC55152, PI55560, ...  FFC55553       150.0\n",
-            "28827  [TC55566, TC55553, FC55102, FC55152, PI55560, ...   PI55020       125.0\n",
-            "28828  [TC55566, TC55553, FC55102, FC55152, PI55560, ...   FC55569       192.0\n",
-            "28829  [TC55566, TC55553, FC55102, FC55152, PI55560, ...   425 %Al       187.0\n",
+            "30715  [TI55021, FC55576, LC52572, TC55553, DI55102, ...   FC42428       145.0\n",
+            "30716  [TI55021, FC55576, LC52572, TC55553, DI55102, ...   FC55152        92.0\n",
+            "30717  [TI55021, FC55576, LC52572, TC55553, DI55102, ...   FC55569       191.0\n",
+            "30718  [TI55021, FC55576, LC52572, TC55553, DI55102, ...   LC55568       105.0\n",
+            "30719  [TI55021, FC55576, LC52572, TC55553, DI55102, ...   PI55560        79.0\n",
             "\n",
-            "[28830 rows x 3 columns]\n"
+            "[30720 rows x 3 columns]\n"
           ]
         }
       ],
@@ -257,48 +293,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "     Feature  Average Importance\n",
-            "0    425 %Al          222.892473\n",
-            "12   FC55569          219.253763\n",
-            "27   TC55552          211.535484\n",
-            "13   FC55576          203.887097\n",
-            "23   LC90368          202.908602\n",
-            "3    DI55152          199.497849\n",
-            "22   LC90366          186.881720\n",
-            "6    FC55003          184.702151\n",
-            "30   TC55566          182.258065\n",
-            "5    FC42428          180.329032\n",
-            "14  FFC55553          176.413978\n",
-            "2    DI55102          176.056989\n",
-            "20   LC55557          175.236559\n",
-            "15  FFC55555          173.005376\n",
-            "29   TC55555          165.967742\n",
-            "1   AYC55580          165.908602\n",
-            "21   LC55568          165.296774\n",
-            "17   LC52572          164.482796\n",
-            "28   TC55553          162.459140\n",
-            "19   LC55555          160.037634\n",
-            "25   PI55020          159.554839\n",
-            "7    FC55009          158.030108\n",
-            "4    DI55580          148.455914\n",
-            "18   LC55553          145.992473\n",
-            "24   PI55004          136.580645\n",
-            "9    FC55152          134.036559\n",
-            "11   FC55555          129.002151\n",
-            "8    FC55102          128.508602\n",
-            "26   PI55560          123.712903\n",
-            "16  FYC55553          118.039785\n",
-            "10   FC55552          110.074194\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Group by 'Feature' and calculate the average importance\n",
         "average_importances = results_df.groupby('Feature')['Importance'].mean()\n",
@@ -312,10 +309,83 @@
         "# Sort the DataFrame by 'Average Importance' in descending order\n",
         "average_importances_df = average_importances_df.sort_values(by='Average Importance', ascending=False)\n",
         "\n",
+        "# # Display or save the DataFrame\n",
+        "# print(average_importances_df)\n",
+        "# # Or save it to a CSV file\n",
+        "# # average_importances_df.to_csv('average_feature_importances.csv', index=False)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "     Feature  Average Importance               Description\n",
+            "0    LC90368          219.814583      FB-658 ALKOXIDE TANK\n",
+            "1    FC55569          216.168750    30# STM TO C4 STRIPPER\n",
+            "2    DI55152          211.645833    2ND STG SEPR TO FA-560\n",
+            "3    425 %Al          209.788542                       NaN\n",
+            "4    TC55552          198.485417  DC-551 ALKOX  FD PREHEAT\n",
+            "5    FC55003          189.708333  DA-551 O/H H2O TO DC-551\n",
+            "6    FC55576          188.615625  CONDENSATE TO DESUPERHTR\n",
+            "7    LC55555          187.950000   FA-552 1ST STG SEP SLRY\n",
+            "8    LC90366          182.446875        FB-657 SAO STORAGE\n",
+            "9   FFC55553          179.833333  DC551 H2O/ALKOXIDE RATIO\n",
+            "10   LC52572          177.922917  FB-554 SLURRY SURGE TANK\n",
+            "11  AYC55580          174.862500  DA554 BTMS SLURRY SOLIDS\n",
+            "12   FC42428          173.507292  STRIPPED ALKOXIDE TO 658\n",
+            "13   LC55557          172.630208       FA-554 SLURRY LEVEL\n",
+            "14   DI55102          169.429167          HYDROL RX OUTLET\n",
+            "15  FFC55555          165.752083  RECYC BUT/ALKOX FD RATIO\n",
+            "16   DI55580          158.289583  DA-554 BTMS SLURRY TO EX\n",
+            "17   TC55553          156.035417   DC-551 HYDR H2O PREHEAT\n",
+            "18   PI55020          152.027083       DA-554 TOP PRESSURE\n",
+            "19   FC55009          151.226042   STM TO PA-551  RING HTR\n",
+            "20   FC55102          149.990625          HYDROL RX OUTLET\n",
+            "21   TC55555          145.913542       EA-552 OUT  RECY C4\n",
+            "22  FYC55553          145.348958         TOT H2O TO DC-551\n",
+            "23   TC55566          144.793750        DA-554 BTMS COOLER\n",
+            "24   TI55021          127.673958            STEAM TO DA554\n",
+            "25   LC55568          127.588542   DA-554 C4 STRPR BOTTOMS\n",
+            "26   LC55553          127.415625  DC551 HYDR RX SLURRY LEV\n",
+            "27   FC55152          124.565625   2ND STG SLURRY TO DA554\n",
+            "28   PI55004          121.209375    DA-554 BOTTOM PRESSURE\n",
+            "29   FC55555          117.576042                       NaN\n",
+            "30   PI55560          116.546875    DA-554 MIDDLE PRESSURE\n",
+            "31   FC55552           94.237500  ALK FD TO HYDR RX DC-551\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\saust\\AppData\\Local\\Temp\\ipykernel_9268\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  final_df.rename(columns={'DESCRIPTION': 'Description'}, inplace=True)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Merge the average_importances_df with df_TagDesc\n",
+        "# Assuming 'ID' in df_TagDesc corresponds to 'Feature' in average_importances_df\n",
+        "merged_df = average_importances_df.merge(df_TagDesc, left_on='Feature', right_on='ID', how='left')\n",
+        "\n",
+        "# Select only the required columns\n",
+        "final_df = merged_df[['Feature', 'Average Importance', 'DESCRIPTION']]\n",
+        "\n",
+        "# Rename the 'DESCRIPTION' column to 'Description'\n",
+        "final_df.rename(columns={'DESCRIPTION': 'Description'}, inplace=True)\n",
+        "\n",
         "# Display or save the DataFrame\n",
-        "print(average_importances_df)\n",
+        "print(final_df)\n",
         "# Or save it to a CSV file\n",
-        "# average_importances_df.to_csv('average_feature_importances.csv', index=False)\n"
+        "# final_df.to_csv('average_feature_importances_with_descriptions.csv', index=False)\n"
       ]
     }
   ],
