Running -- Fingers crossed?

--- a/4 Model Selection/4.0.0  XGB - DateRange Feature Drop copy.ipynb
+++ b/4 Model Selection/4.0.0  XGB - DateRange Feature Drop copy.ipynb
@@ -40,6 +40,30 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "selected_columns = ['Butanol', \n",
+        "                    'FC55569',\n",
+        "                    'DI55152',\n",
+        "                    '425 %Al',\n",
+        "                    'TC55552',\n",
+        "                    'FC55003',\n",
+        "                    'LC55555',\n",
+        "                    'FFC55553',\n",
+        "                    'FFC55555',\n",
+        "                    'TC55555',\n",
+        "                    'TI55021',\n",
+        "                    'PI55004',\n",
+        "                    'FC55552'\n",
+        "                    ]\n",
+        "existing_columns = [col for col in selected_columns if col in df_All.columns]\n",
+        "df_All = df_All[existing_columns]"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 26,
       "metadata": {
         "trusted": true
@@ -56,7 +80,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df_All = df_All[df_All['Date'] > '2020-06-15 00:00:00']"
+        "# df_All = df_All[df_All['Date'] > '2020-06-15 00:00:00']"
       ]
     },
     {
