--- a/3 Feature Selection/1.0.2 SFS_contData.ipynb
+++ b/3 Feature Selection/1.0.2 SFS_contData.ipynb
@@ -24,72 +24,6 @@
     {
       "cell_type": "code",
       "execution_count": 2,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "#df_All = pd.read_csv(r\"C:\\Users\\saust\\OneDrive - Sasol\\1 Project rC4\\Jupyter Notebooks\\Report 10-20-23 No Fluff\\df_All_Avg.csv\")\n",
-        "\n",
-        "# df_All = pd.read_csv('contData_clean.csv')\n",
-        "\n",
-        "#df_All = pd.read_csv(r\"C:\\Users\\saust\\OneDrive - Sasol\\1 Project rC4\\Jupyter Notebooks\\Report 10-20-23 No Fluff\\df_All_Avg.csv\")\n",
-        "\n",
-        "# df_All = pd.read_csv('3 Feature Selection/df_Join_all.csv')\n",
-        "\n",
-        "\n",
-        "df_All_1 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\3 Feature Selection\\contData_all_Avg - 1o2.csv')\n",
-        "df_All_2 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\3 Feature Selection\\contData_all_Avg - 2o2.csv')\n",
-        "\n",
-        "\n",
-        "#df_All = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\CodeSpace DLs\\102423\\Project rC4\\3 Final Machine Butanol\\df_CDCA6.csv\")\n",
-        "\n",
-        "\n",
-        "#df_All = pd.read_csv(r\"C:\\Users\\saust\\OneDrive\\Desktop\\CodeSpace DLs\\102423\\Project rC4\\3 Final Machine Butanol\\df_CDCA6.csv\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    425 %Al    Butanol   Decanol    Ethanol   Hexanol   Octanol   AYC55580  \\\n",
-            "0  6.319560  30.366200  1.030260  88.289900  1.365840  1.492120  18.297300   \n",
-            "1  6.319915  30.678500  1.063260  89.685450  1.397135  1.548230  18.040650   \n",
-            "2  6.328340  32.399333  1.647950  88.677200  1.994413  2.454430  16.637633   \n",
-            "3  6.336760  32.845950  1.928805  87.080875  2.288335  2.897523  15.779400   \n",
-            "4  6.337460  33.387025  2.352595  84.489175  2.734682  3.571185  15.199680   \n",
-            "\n",
-            "    DI55102   DI55152   DI55580  ...    TI40050   TI52014     TI55013  \\\n",
-            "0  0.963347  0.924879  1.017340  ...  81.156900  131.0990  236.672000   \n",
-            "1  0.965043  0.924515  1.014885  ...  82.965650  132.3490  230.501000   \n",
-            "2  0.968107  0.929955  1.015593  ...  82.461167  133.0350  223.885667   \n",
-            "3  0.969573  0.932388  1.014703  ...  83.676300  134.0690  219.719750   \n",
-            "4  0.971022  0.934531  1.014094  ...  85.328040  134.8424  217.253200   \n",
-            "\n",
-            "      TI55014     TI55015   TI55016    TI55017  TI55021     TI55023  VI52558B  \n",
-            "0  223.704000  216.905000  207.7370  205.81700  213.813  212.301000  4.969810  \n",
-            "1  220.794000  216.033500  207.2460  205.70300  213.874  212.308500  4.616265  \n",
-            "2  214.879667  209.812667  202.7230  201.16400  214.433  212.926667  4.741457  \n",
-            "3  211.567250  206.503250  200.5075  199.00025  214.639  213.051250  4.436797  \n",
-            "4  209.326600  204.214800  198.6922  197.25440  214.733  213.071400  4.304762  \n",
-            "\n",
-            "[5 rows x 49 columns]\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Concatenate (union) the dataframes\n",
-        "df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
-        "\n",
-        "print(df_All.head())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
@@ -101,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -110,7 +44,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   425_pct_Al  M_Value  C4_pct_Eth  C4_pct_H2O  C4_pct_Hex  \\\n",
+            "0    6.307630  3.50893    2.508420    21.96340    0.659256   \n",
+            "1    6.308335  3.50863    2.511135    21.96865    0.659930   \n",
+            "2    6.309390  3.50818    2.515210    21.97655    0.660942   \n",
+            "3    6.310090  3.50788    2.517925    21.98185    0.661616   \n",
+            "4    6.310790  3.50758    2.520640    21.98715    0.662291   \n",
+            "\n",
+            "   HydWtr_pct_Ammonia  HydWtr_Na2O   DI55152   FC55003       FC55552  \\\n",
+            "0            0.908765     2.712180  0.925255  4919.290  41564.100000   \n",
+            "1            0.907643     2.805415  0.924281  5039.445  41558.250000   \n",
+            "2            0.905959     2.945270  0.923773  5268.620  41524.066667   \n",
+            "3            0.904837     3.038505  0.924103  5349.320  41500.275000   \n",
+            "4            0.903715     3.131740  0.924258  5563.165  41466.625000   \n",
+            "\n",
+            "       FC55569  FFC55553  FFC55555    LC55555   PI55004   TC55552     TC55555  \\\n",
+            "0  6918.110000  0.996975  0.751501  59.968800  1.306310  177.1880  180.125000   \n",
+            "1  6919.960000  0.998847  0.750588  59.932300  1.181220  177.2505  180.053000   \n",
+            "2  6916.486667  0.998648  0.750505  60.002433  1.216603  177.4170  180.001667   \n",
+            "3  6918.470000  1.000349  0.750325  60.015925  1.206718  177.4590  180.010750   \n",
+            "4  6915.790000  1.000862  0.750021  60.020500  1.163892  177.5490  179.939500   \n",
+            "\n",
+            "      TI55021    Butanol  \n",
+            "0  212.861000  54.858300  \n",
+            "1  212.699000  51.190050  \n",
+            "2  212.822333  48.744567  \n",
+            "3  212.799750  46.604750  \n",
+            "4  212.853000  44.587220  \n"
+          ]
+        }
+      ],
+      "source": [
+        "df_All_1 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Merge Data\\contData_all_Avg_1o2.csv')\n",
+        "df_All_2 = pd.read_csv(r'C:\\Users\\saust\\OneDrive\\Desktop\\GitRepo\\Project-OptiC4\\1 Preprocess\\Merge Data\\contData_all_Avg_2o2.csv')\n",
+        "# Concatenate (union) the dataframes\n",
+        "df_All = pd.concat([df_All_1, df_All_2], ignore_index=True)\n",
+        "\n",
+        "print(df_All.head())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -127,36 +109,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "selected_columns = ['425 %Al', 'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC42428',\n",
-        "       'FC55003', 'FC55552', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555',\n",
-        "       'LC52572', 'LC55553', 'LC55555', 'LC55557', 'LC55568', 'LC90366',\n",
-        "       'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553', 'TC55555'\n",
-        "                   ]\n",
+        "# selected_columns = ['425 %Al', 'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC42428',\n",
+        "#        'FC55003', 'FC55552', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555',\n",
+        "#        'LC52572', 'LC55553', 'LC55555', 'LC55557', 'LC55568', 'LC90366',\n",
+        "#        'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553', 'TC55555'\n",
+        "#                    ]\n",
         "\n",
-        "existing_columns = [col for col in selected_columns if col in df_All.columns]\n",
-        "df_All = df_All[existing_columns]"
+        "# existing_columns = [col for col in selected_columns if col in df_All.columns]\n",
+        "# df_All = df_All[existing_columns]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['425 %Al', 'Butanol', 'DI55102', 'DI55152', 'DI55580', 'FC42428',\n",
-              "       'FC55003', 'FC55552', 'FC55569', 'FC55576', 'FFC55553', 'FFC55555',\n",
-              "       'LC52572', 'LC55553', 'LC55555', 'LC55557', 'LC55568', 'LC90366',\n",
-              "       'LC90368', 'PI55004', 'PI55020', 'TC55552', 'TC55553', 'TC55555'],\n",
+              "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
+              "       'HydWtr_pct_Ammonia', 'HydWtr_Na2O', 'DI55152', 'FC55003', 'FC55552',\n",
+              "       'FC55569', 'FFC55553', 'FFC55555', 'LC55555', 'PI55004', 'TC55552',\n",
+              "       'TC55555', 'TI55021', 'Butanol'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -167,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -209,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -217,38 +199,32 @@
           "output_type": "stream",
           "text": [
             "Selected Features:\n",
-            "Index(['DI55102', 'DI55152', 'DI55580', 'FC42428', 'FC55003', 'FC55552',\n",
-            "       'FC55569', 'FC55576', 'FFC55553', 'FFC55555', 'LC52572', 'LC55553',\n",
-            "       'LC55555', 'LC55557', 'LC55568', 'LC90366', 'LC90368', 'PI55004',\n",
-            "       'PI55020', 'TC55552', 'TC55553', 'TC55555'],\n",
+            "Index(['425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O', 'C4_pct_Hex',\n",
+            "       'HydWtr_Na2O', 'DI55152', 'FC55003', 'FC55552', 'FC55569', 'FFC55553',\n",
+            "       'FFC55555', 'LC55555', 'PI55004', 'TC55552', 'TC55555', 'TI55021'],\n",
             "      dtype='object')\n",
             "\n",
             "Model Coefficients:\n",
-            "DI55102: 24.98290662827781\n",
-            "DI55152: -3.0520922010203804\n",
-            "DI55580: 13.370015397011752\n",
-            "FC42428: -9.096045437712732e-05\n",
-            "FC55003: -0.0008478237082039891\n",
-            "FC55552: 0.00042723928048791674\n",
-            "FC55569: -0.0021131129132163137\n",
-            "FC55576: 0.006359060746466037\n",
-            "FFC55553: 5.182042417643112\n",
-            "FFC55555: -35.47138220315785\n",
-            "LC52572: 0.1530553021328216\n",
-            "LC55553: -0.158442152949189\n",
-            "LC55555: 0.11881791152727368\n",
-            "LC55557: -0.24050222706510838\n",
-            "LC55568: 0.406071192915321\n",
-            "LC90366: -0.020756542895760236\n",
-            "LC90368: 0.035500959850818116\n",
-            "PI55004: -0.28698322201231535\n",
-            "PI55020: 1.4017173225464035\n",
-            "TC55552: 0.047743984836711724\n",
-            "TC55553: 0.026048755188356216\n",
-            "TC55555: 0.1929901456256612\n",
+            "425_pct_Al: 0.24241357844598496\n",
+            "M_Value: -1.3614677752608468\n",
+            "C4_pct_Eth: -0.5679399700555137\n",
+            "C4_pct_H2O: 0.38547905606320193\n",
+            "C4_pct_Hex: -2.3029961886607415\n",
+            "HydWtr_Na2O: -0.6319778947478415\n",
+            "DI55152: 16.27794384832723\n",
+            "FC55003: -0.0011796168184368978\n",
+            "FC55552: 0.0004517492207993062\n",
+            "FC55569: -0.00343546336845222\n",
+            "FFC55553: 31.67255745457808\n",
+            "FFC55555: -53.06691692221332\n",
+            "LC55555: 0.037291351392160436\n",
+            "PI55004: 0.22898638978286537\n",
+            "TC55552: 0.05414439399315018\n",
+            "TC55555: 0.8580650369730227\n",
+            "TI55021: -0.15171046358218665\n",
             "\n",
-            "R-squared on Training Set: 0.20172567531764463\n",
-            "R-squared on Test Set: 0.18177496702027351\n"
+            "R-squared on Training Set: 0.1446555029457367\n",
+            "R-squared on Test Set: 0.1437920050852457\n"
           ]
         }
       ],
