--- a/4 Model Selection/1.0.3 XGB - GridSearch copy.ipynb
+++ b/4 Model Selection/1.0.3 XGB - GridSearch copy.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 100,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 101,
       "metadata": {},
       "outputs": [
         {
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 102,
       "metadata": {
         "trusted": true
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 103,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 104,
       "metadata": {},
       "outputs": [
         {
@@ -161,50 +161,103 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 105,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Evaluating {'learning_rate': 0.03, 'n_estimators': 800, 'max_depth': 9, 'subsample': 0.9, 'colsample_bytree': 0.8, 'gamma': 0.5, 'alpha': 0.1, 'lambda': 1, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7} took 22.82 seconds\n",
-            "MSE: 6.1106, MAE: 1.2995, R^2: 0.9297, Adjusted R^2: 0.9297, RMSE: 2.4720\n",
-            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 9, 'subsample': 0.9, 'colsample_bytree': 0.8, 'gamma': 0.5, 'alpha': 0.1, 'lambda': 1, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7} took 19.58 seconds\n",
-            "MSE: 5.5242, MAE: 1.2149, R^2: 0.9364, Adjusted R^2: 0.9364, RMSE: 2.3504\n",
-            "Evaluating {'learning_rate': 0.1, 'n_estimators': 800, 'max_depth': 9, 'subsample': 0.9, 'colsample_bytree': 0.8, 'gamma': 0.5, 'alpha': 0.1, 'lambda': 1, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7} took 11.69 seconds\n",
-            "MSE: 5.7004, MAE: 1.2460, R^2: 0.9344, Adjusted R^2: 0.9344, RMSE: 2.3876\n",
-            "Evaluating {'learning_rate': 0.2, 'n_estimators': 800, 'max_depth': 9, 'subsample': 0.9, 'colsample_bytree': 0.8, 'gamma': 0.5, 'alpha': 0.1, 'lambda': 1, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7} took 7.99 seconds\n",
-            "MSE: 6.4902, MAE: 1.3671, R^2: 0.9253, Adjusted R^2: 0.9253, RMSE: 2.5476\n",
-            "Best Parameters: {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 9, 'subsample': 0.9, 'colsample_bytree': 0.8, 'gamma': 0.5, 'alpha': 0.1, 'lambda': 1, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7}\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Splitting into train and test\n",
         "X = df_All.drop('Butanol', axis=1)  # Assuming 'target' is your target column\n",
         "y = df_All['Butanol']\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "scaler = StandardScaler()\n",
-        "X_train_scaled = scaler.fit_transform(X_train)\n",
-        "X_test_scaled = scaler.transform(X_test)\n",
+        "# scaler = StandardScaler()\n",
+        "# X_train = scaler.fit_transform(X_train)\n",
+        "# X_test = scaler.transform(X_test)\n",
         "\n",
         "# Define the parameter grid\n",
         "\n",
         "param_grid = {\n",
-        "    'learning_rate': [0.03, 0.05, 0.1, 0.2],  # Introduced some intermediate and higher values.\n",
+        "    'learning_rate': [0.05],  # Introduced some intermediate and higher values. 0.05, 0.06, 0.07, 0.08\n",
         "    'n_estimators': [800],     # Expanded around 500, as it was your best result.\n",
-        "    'max_depth': [9],                # Introduced values around 7, which was your best depth. 6, 7, 8, \n",
-        "    'subsample': [0.9],        # Expanded a bit to include values around 0.8.   0.7, 0.8, , 1.0\n",
-        "    'colsample_bytree': [0.8],      # Values around your best result of 0.7.  0.6, 0.7, \n",
-        "    'gamma': [0.5],                   # Regularization parameter. Start with these values. 0, 0.1, \n",
-        "    'alpha': [0.1],                   # L1 regularization term. 0, , 0.5\n",
-        "    'lambda': [1],                    # L2 regularization term.  , 1.5, 2\n",
-        "    'colsample_bylevel': [0.8],     # Additional column sampling.  0.6, 0.7, \n",
-        "    'colsample_bynode': [ 0.7]       # More granular column sampling  .0.6, 0.8\n",
-        "}\n",
-        "\n",
+        "    'max_depth': [10],                # Introduced values around 7, which was your best depth. 6, 7, 8, \n",
+        "    'subsample': [0.6],        # Expanded a bit to include values around 0.8. 0.8, 0.9, 1.0, 0.7, 0.6, 0.5, 0.4\n",
+        "    'colsample_bytree': [1],      # Values around your best result of 0.7.  0.6, 0.7, 0.8, 0.9, 1\n",
+        "    'gamma': [0],                   # Regularization parameter. Start with these values. 0, 0.1, 0.5 \n",
+        "    'alpha': [1.5],                   # L1 regularization term. 0, 0.1, 0.5, 0.7, 0.9, 1, 1.3, 1.4 1.5, 1.6, 2\n",
+        "    'lambda': [1.5],                    # L2 regularization term.  1, 1.5, 2\n",
+        "    'colsample_bylevel': [0.8],     # Additional column sampling.  0.6, 0.7,0.8 \n",
+        "    'colsample_bynode': [0.7]       # More granular column sampling  .0.6, 0.8\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 106,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.6} took 30.96 seconds\n",
+            "MSE: 4.9128, MAE: 1.1147, R^2: 0.9435, Adjusted R^2: 0.9435, RMSE: 2.2165\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.7} took 37.21 seconds\n",
+            "MSE: 4.9213, MAE: 1.1115, R^2: 0.9434, Adjusted R^2: 0.9434, RMSE: 2.2184\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.8} took 35.34 seconds\n",
+            "MSE: 4.8325, MAE: 1.0939, R^2: 0.9444, Adjusted R^2: 0.9444, RMSE: 2.1983\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.6} took 40.09 seconds\n",
+            "MSE: 4.9726, MAE: 1.1155, R^2: 0.9428, Adjusted R^2: 0.9428, RMSE: 2.2299\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.7} took 40.37 seconds\n",
+            "MSE: 4.8053, MAE: 1.0929, R^2: 0.9447, Adjusted R^2: 0.9447, RMSE: 2.1921\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.8} took 40.51 seconds\n",
+            "MSE: 4.8356, MAE: 1.0897, R^2: 0.9444, Adjusted R^2: 0.9443, RMSE: 2.1990\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.6} took 38.26 seconds\n",
+            "MSE: 4.8204, MAE: 1.0967, R^2: 0.9445, Adjusted R^2: 0.9445, RMSE: 2.1955\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7} took 39.67 seconds\n",
+            "MSE: 4.8120, MAE: 1.0875, R^2: 0.9446, Adjusted R^2: 0.9446, RMSE: 2.1936\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.8} took 40.37 seconds\n",
+            "MSE: 4.8218, MAE: 1.0919, R^2: 0.9445, Adjusted R^2: 0.9445, RMSE: 2.1958\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.6} took 34.93 seconds\n",
+            "MSE: 4.9368, MAE: 1.1160, R^2: 0.9432, Adjusted R^2: 0.9432, RMSE: 2.2219\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.7} took 35.19 seconds\n",
+            "MSE: 4.9131, MAE: 1.1089, R^2: 0.9435, Adjusted R^2: 0.9435, RMSE: 2.2165\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.8} took 36.87 seconds\n",
+            "MSE: 4.8139, MAE: 1.0920, R^2: 0.9446, Adjusted R^2: 0.9446, RMSE: 2.1941\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.6} took 34.75 seconds\n",
+            "MSE: 4.9273, MAE: 1.1116, R^2: 0.9433, Adjusted R^2: 0.9433, RMSE: 2.2198\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.7} took 36.62 seconds\n",
+            "MSE: 4.9039, MAE: 1.0980, R^2: 0.9436, Adjusted R^2: 0.9436, RMSE: 2.2145\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.8} took 38.02 seconds\n",
+            "MSE: 4.8364, MAE: 1.0933, R^2: 0.9444, Adjusted R^2: 0.9443, RMSE: 2.1992\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.6} took 38.13 seconds\n",
+            "MSE: 4.7898, MAE: 1.0897, R^2: 0.9449, Adjusted R^2: 0.9449, RMSE: 2.1886\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7} took 37.76 seconds\n",
+            "MSE: 4.7627, MAE: 1.0881, R^2: 0.9452, Adjusted R^2: 0.9452, RMSE: 2.1824\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.8} took 40.44 seconds\n",
+            "MSE: 4.8328, MAE: 1.0902, R^2: 0.9444, Adjusted R^2: 0.9444, RMSE: 2.1984\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.6} took 32.87 seconds\n",
+            "MSE: 4.9729, MAE: 1.1231, R^2: 0.9428, Adjusted R^2: 0.9428, RMSE: 2.2300\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.7} took 36.14 seconds\n",
+            "MSE: 4.9499, MAE: 1.1126, R^2: 0.9430, Adjusted R^2: 0.9430, RMSE: 2.2248\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.6, 'colsample_bynode': 0.8} took 38.30 seconds\n",
+            "MSE: 4.8676, MAE: 1.1045, R^2: 0.9440, Adjusted R^2: 0.9440, RMSE: 2.2063\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.6} took 40.81 seconds\n",
+            "MSE: 4.9211, MAE: 1.1156, R^2: 0.9434, Adjusted R^2: 0.9434, RMSE: 2.2184\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.7} took 42.22 seconds\n",
+            "MSE: 4.8147, MAE: 1.0955, R^2: 0.9446, Adjusted R^2: 0.9446, RMSE: 2.1943\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.7, 'colsample_bynode': 0.8} took 40.27 seconds\n",
+            "MSE: 4.8115, MAE: 1.0890, R^2: 0.9446, Adjusted R^2: 0.9446, RMSE: 2.1935\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.6} took 40.46 seconds\n",
+            "MSE: 4.8567, MAE: 1.1041, R^2: 0.9441, Adjusted R^2: 0.9441, RMSE: 2.2038\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7} took 42.94 seconds\n",
+            "MSE: 4.8965, MAE: 1.1001, R^2: 0.9437, Adjusted R^2: 0.9436, RMSE: 2.2128\n",
+            "Evaluating {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 2, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.8} took 43.10 seconds\n",
+            "MSE: 4.8167, MAE: 1.0876, R^2: 0.9446, Adjusted R^2: 0.9446, RMSE: 2.1947\n",
+            "Best Parameters: {'learning_rate': 0.05, 'n_estimators': 800, 'max_depth': 10, 'subsample': 0.6, 'colsample_bytree': 1, 'gamma': 0, 'alpha': 1.5, 'lambda': 1.5, 'colsample_bylevel': 0.8, 'colsample_bynode': 0.7}\n"
+          ]
+        }
+      ],
+      "source": [
         "# param_grid = {\n",
         "#     'learning_rate': [0.01, 0.1],\n",
         "#     'n_estimators': [100, 500],\n",
@@ -231,12 +284,12 @@
         "    start_time = time.time()\n",
         "    \n",
         "    xgb_reg.set_params(**params)\n",
-        "    y_pred = cross_val_predict(xgb_reg, X_train_scaled, y_train, cv=3)\n",
+        "    y_pred = cross_val_predict(xgb_reg, X_train, y_train, cv=3)\n",
         "\n",
         "    mse = mean_squared_error(y_train, y_pred)\n",
         "    mae = mean_absolute_error(y_train, y_pred)\n",
         "    r2 = r2_score(y_train, y_pred)\n",
-        "    adj_r2 = 1 - (1-r2)*(len(y_train)-1)/(len(y_train)-X_train_scaled.shape[1]-1)\n",
+        "    adj_r2 = 1 - (1-r2)*(len(y_train)-1)/(len(y_train)-X_train.shape[1]-1)\n",
         "    rmse = np.sqrt(mse)\n",
         "\n",
         "    end_time = time.time()\n",
@@ -266,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 107,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -275,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [
         {
@@ -283,16 +336,18 @@
           "output_type": "stream",
           "text": [
             "                                          Parameters       MSE       MAE  \\\n",
-            "0  {'learning_rate': 0.03, 'n_estimators': 800, '...  6.110560  1.299550   \n",
-            "1  {'learning_rate': 0.05, 'n_estimators': 800, '...  5.524242  1.214944   \n",
-            "2  {'learning_rate': 0.1, 'n_estimators': 800, 'm...  5.700427  1.245971   \n",
-            "3  {'learning_rate': 0.2, 'n_estimators': 800, 'm...  6.490183  1.367121   \n",
+            "0  {'learning_rate': 0.05, 'n_estimators': 800, '...  4.912828  1.114663   \n",
+            "1  {'learning_rate': 0.05, 'n_estimators': 800, '...  4.921252  1.111488   \n",
+            "2  {'learning_rate': 0.05, 'n_estimators': 800, '...  4.832467  1.093934   \n",
+            "3  {'learning_rate': 0.05, 'n_estimators': 800, '...  4.972566  1.115476   \n",
+            "4  {'learning_rate': 0.05, 'n_estimators': 800, '...  4.805282  1.092910   \n",
             "\n",
             "        R^2  Adjusted R^2      RMSE   Duration  \n",
-            "0  0.929692      0.929668  2.471955  22.818402  \n",
-            "1  0.936438      0.936417  2.350371  19.577923  \n",
-            "2  0.934411      0.934389  2.387557  11.686263  \n",
-            "3  0.925324      0.925299  2.547584   7.987237  \n"
+            "0  0.943473      0.943454  2.216490  30.959794  \n",
+            "1  0.943376      0.943357  2.218389  37.214747  \n",
+            "2  0.944398      0.944379  2.198287  35.337413  \n",
+            "3  0.942786      0.942766  2.229925  40.090993  \n",
+            "4  0.944711      0.944692  2.192095  40.372811  \n"
           ]
         }
       ],
